[package]
name = "yubikey-ssh-agent"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
base64 = "0.13"
clap = { version = "3.1", features = ["derive"] }
egui = "0.17"
eframe = "0.17"
env_logger = "0.9"
log = "0.4"
notify-rust = "4.5"
rsa = "0.5"
ssh-agent = { version = "0.2", features = ["agent"] }
ssh-key = { version = "0.4", features = ["alloc", "ecdsa"] }
thiserror = "1.0"
x509-certificate = "0.12"
x509 = "0.2"
yubikey = "0.5"
zeroize = "1.3"

[patch.crates-io]
eframe = { git = "https://github.com/indygreg/egui", rev = "e7f220c7e791f1f51851b9df6f43c47fed27deb9" }
egui_glow = { git = "https://github.com/indygreg/egui", rev = "e7f220c7e791f1f51851b9df6f43c47fed27deb9" }
egui-winit = { git = "https://github.com/indygreg/egui", rev = "e7f220c7e791f1f51851b9df6f43c47fed27deb9" }
egui = { git = "https://github.com/indygreg/egui", rev = "e7f220c7e791f1f51851b9df6f43c47fed27deb9" }
epi = { git = "https://github.com/indygreg/egui", rev = "e7f220c7e791f1f51851b9df6f43c47fed27deb9" }
