[package]
name = "yubikey-ssh-agent"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
base64 = "0.13"
clap = { version = "3.1", features = ["derive"] }
directories = "4.0"
egui = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
egui-winit = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
eframe = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
env_logger = "0.9"
glow = "0.11"
glutin = "0.28"
log = "0.4"
rsa = "0.5"
ssh-agent = { version = "0.2", features = ["agent"] }
ssh-key = { version = "0.4", features = ["alloc", "ecdsa"] }
thiserror = "1.0"
winit = { git = "https://github.com/rust-windowing/winit", rev = "ce890c34551d9fb542f10dcb644d22d382e0c921" }
x509-certificate = "0.12"
x509 = "0.2"
yubikey = "0.5"
zeroize = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
cocoa-foundation = { git = "https://github.com/servo/core-foundation-rs", rev = "079665882507dd5e2ff77db3de5070c1f6c0fb85" }
objc = "0.2"

[patch.crates-io]
eframe = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
egui_glow = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
egui-winit = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
egui = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
epi = { git = "https://github.com/indygreg/egui", rev = "e5b9d8443f359c716843e28e3ed0a8d85b8a3ec4" }
winit = { git = "https://github.com/rust-windowing/winit", rev = "ce890c34551d9fb542f10dcb644d22d382e0c921" }
